dodanie zdjec, stworzenie galeri, poformatowano tekst

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>Pacyfikacja Wsi Rudno</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,13 +10,14 @@
 
     <div class="grid-main">
 
-        <div class="logo"><img src="images/Logo.png"></div>
+        <div class="logo">
+            <img src="images/pomnik.jpg">
+        </div>
 
         <div class="navbar">
             <a href="index.html" class="button">Strona Główna</a>
-            <a href="Galeria.html" class="button">Galeria zdjęć</a>
-            <a href="Ofiary.html" class="button">Ofiary Zbrodni</a>
-            <a href="index.html" class="button">Strona Główna</a>
+            <a href="galeria.html" class="button">Galeria zdjęć</a>
+            <a href="ofiary.html" class="button">Ofiary Zbrodni</a>
         </div>
 
         <div class="main">
@@ -27,7 +28,7 @@
                     <h5 style="text-align: center;">Stowarzyszenie "Nasza Wieś" Rudno</h5>
                 </header>
                 <article>
-                    <h3>Początki prześladowania Polaków przez okupanta</h3>
+                    <h3 style="text-align: center;">Początki prześladowania Polaków przez okupanta</h3>
                     <p>Od pierwszych dni okupacji niemiecki terror wymierzony był przede wszystkim w przedstawicieli
                         polskich elit politycznych, społecznych i intelektualnych. Zgodnie z rasistowskim stereotypem
                         Polaka panującym w III Rzeszy nazistowscy przywódcy wierzyli, że świadomość narodową posiada
@@ -56,7 +57,7 @@
                         Palmirach.</p>
                     <p>Na wschodzie Rosjanie w tym czasie dokonywali egzekucji na Polskich żołnierzach w Katyniu,
                         Miednoje i innych miejscach.</p>
-                    <h3>Pacyfikacja na mieszkańcach wsi Rudno</h3>
+                    <h3 style="text-align: center;">Pacyfikacja na mieszkańcach wsi Rudno</h3>
                     <p>Niniejsze opracowanie o przebiegu pacyfikacji wsi Rudno dokonanej przez hitlerowców w dniu 30
                         maja 1940 roku oparto na podstawie relacji bezpośrednich uczestników tych tragicznych wydarzeń:
                         Wiktora Pajdosza, Karola Masłowskiego, Mikołaja Marciniuka, Franciszka Toczko i Michała Robaka.
@@ -248,7 +249,7 @@
                         grobie, znajdującym się niedaleko bramy wejściowej na cmentarzu, postawiono duży pomnik.</p>
                     <p>Opisana pacyfikacja wsi Rudno była jedną z pierwszych na terenie powiatu radzyńskiego i
                         parczewskiego.</p>
-                    <h2>Wspomnienia mieszkańców wsi Rudno, Bezwola i Planta</h2>
+                    <h2 style="text-align: center;">Wspomnienia mieszkańców wsi Rudno, Bezwola i Planta</h2>
                     <p><strong> Nazywam się Jan Denisiuk. Dzisiaj mam 81 lat. Urodziłem się i mieszkam w
                             Rudnie.</strong></p>
                     <p>W roku 1940 miałem 6 lat. Pamiętam jak 30 maja po mszy na zakończenie oktawy Bożego Ciała do
@@ -362,11 +363,13 @@
                     <p><strong>Niemcy zabili jej brata.Pani Anna z Paraciów, emerytowana nauczycielka, pochodziz Rudna.
                             Ukończyła Liceum Pedagogiczne w Siedlcach, ale nie podjęła pracy, ponieważ wybuchła wojna.
                             Wróciła więc do rodzinnej wsi.</strong></p>
-                    <p>Dzieci z Komarówki i sąsiednich wiosek nie chodziły do szkoły, ponieważ budynek szkoły Niemcy
-                        zajęli na magazyny – mówi pani Anna. W maju 1940 roku, kiedy miały miejsce tragiczne wydarzenia
-                        w Rudnie, mieszkała tam razem z rodzicami
-                        i rodzeństwem. Zginął wówczas jej starszy brat Stanisław, a siostrę Niemcy wywieźli na roboty.
-                        Pacyfikację i mord w Rudnie wspomina tak:
+                    <p><i>Dzieci z Komarówki i sąsiednich wiosek nie chodziły do szkoły, ponieważ budynek szkoły Niemcy
+                            zajęli na magazyny – mówi pani Anna. W maju 1940 roku, kiedy miały miejsce tragiczne
+                            wydarzenia
+                            w Rudnie, mieszkała tam razem z rodzicami
+                            i rodzeństwem. Zginął wówczas jej starszy brat Stanisław, a siostrę Niemcy wywieźli na
+                            roboty.
+                            Pacyfikację i mord w Rudnie wspomina tak:
                     </p>
                     <p>Ludzie myśleli, że to może na wywózkę na roboty do Niemiec. Mój brat powiedział, że pójdzie do
                         sklepu trzy domy dalej po papierosy na drogę. Wyszedł boso, w koszuli i spodniach. Zatrzymał się
@@ -396,39 +399,52 @@
                         społeczność zabiega o nagłośnienie tych wydarzeń, by szersze grono osób poznało wydarzenia,
                         jakie rozegrały się w małej wiosce, jaką jest Rudno. Mamy nadzieję, że w ten sposób przyczynimy
                         się chociaż
-                        w małej części do tego procesu .
+                        w małej części do tego procesu .</i>
                     </p>
                     <p><strong>Stanisław Iwaszko s. Grzegorza i Anny z/d Wołodko,
                             ur. 07.X.1907 r. w Radczu.
                         </strong></p>
-                    <p>Dnia 30 maja 1940 r. ze wsi Radcze szli do lasu Planta po żerdzie : Stanisław i Józef Iwaszko,
-                        Seweryn Cięciesz, Czesław Kwasowiec i Piotr Kiełbasa. Idąc do lasu, musieli przejść przez wieś
-                        Rudno. Nie posłuchali ostrzeżeń jakiejś kobiety, która im powiedziała, że w Milanowie zabito
-                        Niemca i mogą łapać ludzi. Idących minęły samochody z Niemcami, więc tym śmielej poszli dalej,
-                        ale gdy chcieli ze wsi iść w stronę lasu, wtedy Niemcy zatrzymali ich i dołączyli do ludzi
-                        zgonionych na placu naprzeciw kościoła we wsi Rudno. Pognano ich pod las. Przy kościele była
-                        kobieta z małym dzieckiem na ręku. Dziecko to bardzo płakało. Jeden z Niemców zapytał czyje to
-                        jest dziecko i wtedy z kolumny wypuszczono ojca dziecka. Gdy kolumna była pod lasem, kazano
-                        wszystkim usiąść. Kilku Niemców pojechało samochodem do lasu, pozostali zaś rozpoczęli
-                        selekcjonować. Niemcy kazali księdzu, który musiał z nimi chodzić, potwierdzać czy zapytani
-                        mówią prawdę, tj. czy mają dzieci, czy są kawalerami itp. Gdy ktoś z rodziny jest
-                        w Rzeszy na robotach, tego zwalniali.
+                    <p><i>Dnia 30 maja 1940 r. ze wsi Radcze szli do lasu Planta po żerdzie : Stanisław i Józef Iwaszko,
+                            Seweryn Cięciesz, Czesław Kwasowiec i Piotr Kiełbasa. Idąc do lasu, musieli przejść przez
+                            wieś
+                            Rudno. Nie posłuchali ostrzeżeń jakiejś kobiety, która im powiedziała, że w Milanowie zabito
+                            Niemca i mogą łapać ludzi. Idących minęły samochody z Niemcami, więc tym śmielej poszli
+                            dalej,
+                            ale gdy chcieli ze wsi iść w stronę lasu, wtedy Niemcy zatrzymali ich i dołączyli do ludzi
+                            zgonionych na placu naprzeciw kościoła we wsi Rudno. Pognano ich pod las. Przy kościele była
+                            kobieta z małym dzieckiem na ręku. Dziecko to bardzo płakało. Jeden z Niemców zapytał czyje
+                            to
+                            jest dziecko i wtedy z kolumny wypuszczono ojca dziecka. Gdy kolumna była pod lasem, kazano
+                            wszystkim usiąść. Kilku Niemców pojechało samochodem do lasu, pozostali zaś rozpoczęli
+                            selekcjonować. Niemcy kazali księdzu, który musiał z nimi chodzić, potwierdzać czy zapytani
+                            mówią prawdę, tj. czy mają dzieci, czy są kawalerami itp. Gdy ktoś z rodziny jest
+                            w Rzeszy na robotach, tego zwalniali.
                     </p>
                     <p>Po powrocie Niemców z lasu odebranych od reszty, Niemcy policzyli, a reszcie kazali iść do domu.
-                        Z Radcza powrócił Stanisław Iwaszko i Piotr Kiełbasa s/ Augustyna.
-                        <br>
-                        <br>
-                        Podpisał: Iwaszko Stanisław
-                        <br>
-                        Spisał: M. Jędruszczak
-                        Radcze 23. VII. 1974 r.
+                        Z Radcza powrócił Stanisław Iwaszko i Piotr Kiełbasa s/ Augustyna.</p></i>
+                    <br>
+                    Podpisał: Iwaszko Stanisław
+                    <br>
+                    Spisał: M. Jędruszczak
+                    Radcze 23. VII. 1974 r.
                     </p>
                 </article>
             </section>
 
         </div>
 
-        <div class="footer">Stopka</div>
+        <div class="footer">
+            <span>
+                <strong>Materiały zebrali i opracowali:</strong>
+                <br> Krzysztof Sokół 
+                <br> Agata Sokół
+                <br> Małgorzata Semeniuk
+            </span>
+            <br>
+            <span>
+                All rights reserved to <strong>Anna Olkowska</strong>
+            </span>
+        </div>
 
     </div>
 
