changes to the front-page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="grid-main">
 
         <div class="logo">
-            <img src="images/pomnik.jpg">
+            <div class="titles">Pacyfikacja wsi Rudno</div>
         </div>
 
         <div class="navbar">
@@ -23,7 +23,7 @@
         <div class="main">
             <section>
                 <header>
-                    <h1 style="text-align: center;">Pacyfikacja wsi Rudno 30.05.1940 roku</h1>
+                    <h1 style="text-align: center;">Pacyfikacja wsi Rudno <br> 30.05.1940 r.</h1>
                     <hr>
                     <h5 style="text-align: center;">Stowarzyszenie "Nasza Wieś" Rudno</h5>
                 </header>
@@ -436,7 +436,7 @@
         <div class="footer">
             <span>
                 <strong>Materiały zebrali i opracowali:</strong>
-                <br> Krzysztof Sokół 
+                <br> Krzysztof Sokół
                 <br> Agata Sokół
                 <br> Małgorzata Semeniuk
             </span>
